Closed
Bug 349904
Opened 19 years ago
Closed 19 years ago
Fixes for MathML under Pango
Categories
(Core :: MathML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: mozilla, Assigned: rbs)
References
(Blocks 1 open bug)
Details
(Keywords: verified1.8.1)
Attachments
(2 files)
|
1.82 KB,
patch
|
jshin1987
:
review+
rbs
:
superreview+
beltzner
:
approval1.8.1+
|
Details | Diff | Splinter Review |
|
2.51 KB,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7.13) Gecko/20060501 Epiphany/2.14
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7.13) Gecko/20060501 Epiphany/2.14
Attaching a patch that fixes MathML rendering under Pango. This has been tracked downstream here:
https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=mathml
For more details, check that bug.
Reproducible: Always
| Reporter | ||
Comment 1•19 years ago
|
||
It's very short and rather trivial.
Comment on attachment 235101 [details] [diff] [review]
The patch
If jshin is happy with it, so will I be.
Attachment #235101 -
Flags: superreview?(rbs)
Attachment #235101 -
Flags: review?(jshin)
Attachment #235101 -
Flags: review?(jshin) → review?(jshin1987)
Comment 3•19 years ago
|
||
Comment on attachment 235101 [details] [diff] [review]
The patch
r=jshin
Now I wonder if we should consider switching to pagno for FF2 (perhaps, it's too late in the cycle). In addition, I forgot uploading my patch for bug 327946 made a long time ago.....
Attachment #235101 -
Flags: review?(jshin1987) → review+
Comment on attachment 235101 [details] [diff] [review]
The patch
sr=rbs, I am going to check this in.
Attachment #235101 -
Flags: superreview?(rbs) → superreview+
Checked in.
Status: UNCONFIRMED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Comment 6•19 years ago
|
||
Comment on attachment 235101 [details] [diff] [review]
The patch
I want this on the branch to keep Linux distributors from having to take it themselves. Doesn't affect code we ship, and it remedies a significant problem with the pango builds of the 1.5.x era.
Attachment #235101 -
Flags: approval1.8.1?
Comment 7•19 years ago
|
||
Comment on attachment 235101 [details] [diff] [review]
The patch
a=beltzner on behalf of the 181drivers
Attachment #235101 -
Flags: approval1.8.1? → approval1.8.1+
| Assignee | ||
Comment 10•19 years ago
|
||
Behdad, it seems pango is still suffering -- see bug 321994.
Comment 11•19 years ago
|
||
verified with Linux BE nightly from 20061009
Keywords: fixed1.8.1 → verified1.8.1
See Also: → https://launchpad.net/bugs/19066
You need to log in
before you can comment on or make changes to this bug.
Description
•