Fix for MathML's GetBoundingMetrics under Pango. Patch by Behdad Esfahbod <mozilla@behdad.org>, b=349904, r=jshin, sr=rbs